--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!-- 
-  TRIVIA TIME: VERTICAL FEED EDITION (v10.4 - Global Likes)
+  BUBBLEUP: VERTICAL FEED EDITION (v10.4 - Global Likes)
   
   RELEASE NOTES v10.4:
+  - Rebranded: "Trivia Time" is now "BubbleUp".
   - Feature: "Global" Like Button logic added.
   - UI: Added Like Counter to the sidebar.
   - Core: Integrated optimistic UI updates for liking topics.
@@ -13,7 +14,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Trivia Time: Feed v10.4</title>
+    <title>BubbleUp: Feed v10.4</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -636,7 +637,7 @@
 
 <div class="ui-layer">
     <div id="tv-bug">
-        <div class="text-[0.6rem] font-black text-cyan-400 tracking-widest mb-1">TRIVIA TIME</div>
+        <div class="text-[0.6rem] font-black text-cyan-400 tracking-widest mb-1">BUBBLEUP</div>
         <div id="clock-time" class="text-2xl font-bold leading-none">00:00</div>
     </div>
     
